crates/myso-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/myso-swarm-config/tests/snapshot_tests.rs
expression: genesis.myso_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 110
system_state_version: 1
validators:
  total_stake: 2000000000000000
  active_validators:
    - metadata:
        myso_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0x45ef9238395ac9065db72163b57eaee6d120d19b708f1057a15f18766f010351"
          size: 0
      voting_power: 10000
      operation_cap_id: "0x70dded7eba4ad54f2d695d0224e983985e40776acc504a15a22fe31de58efce1"
      gas_price: 1000
      staking_pool:
        id: "0x8b3eb8b8c29057b4b7e1c0f5064b663b08aa79ac30aed84338ee3687baee2d44"
        activation_epoch: 0
        deactivation_epoch: ~
        myso_balance: 2000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 2000000000000000
        exchange_rates:
          id: "0x892fd3891dc3d76ca8ef7935c841b995c6269b606d0b2457baa81f14b22ba79e"
          size: 1
        pending_stake: 0
        pending_total_myso_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x619393898a2c882a2aa9139a370a81d4423c9b637cea9c6d873dd0dbb56a3279"
          size: 0
      commission_rate: 200
      next_epoch_stake: 2000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0xe47328d0a078e29a3041cdb5ba583ac8a9719b58634207e3a5e2fa371ebdf52c"
        size: 0
  pending_active_validators:
    contents:
      id: "0x04211a779dfe86b7a531a1aa755be42ab41c6df761facbe6e4e804ece70e7678"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xf6336eb83c83e1f0e26a29052f0c9f15593ad7b6ab00bb2e0d968ec97c8ae269"
    size: 1
  inactive_validators:
    id: "0x07729c5341d6cfcbfcb0c15e4a62d8f1ad04c05b36553ecc850a43e86c710810"
    size: 0
  validator_candidates:
    id: "0xbc95b00cf2171a082502483522c8450150d1b913a484bccf71fd014a517b6207"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0x7c646e08f63a1e0d4d17bde158de7ce267711048615c67d5c83dcf52927d701f"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 3000000000000000
  validator_low_stake_threshold: 2000000000000000
  validator_very_low_stake_threshold: 1500000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0x41de6312fee0dd9a87a50ccf332a4960f1b310376825421811c15f75a9818068"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 923000000000000000
  distribution_counter: 0
  current_apy_bps: 400
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
  max_apy_bps: 10000
  min_apy_bps: 0
  intended_duration_years: 10
  extra_fields:
    id:
      id: "0xb90879cc942f7aaf352f7db9e103d0686bd3b4898bb1b352a8ee7e7d590a3991"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0xbbceed2d0289b5d7fb99fd4ba1356ea5d84cf19d2f8b057e6314c6a0f831526e"
  size: 0
