crates/myso-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-4.snap
---
source: crates/myso-config/tests/snapshot_tests.rs
expression: genesis.clock()
---
id:
  id: "0x0000000000000000000000000000000000000000000000000000000000000006"
timestamp_ms: 0

